# raspi

./: .gitignore  crosscompile.sublime-workspace  notes.ida  raspi.ida  raspi.sublime-project  raspi.sublime-workspace  rpi.cmake  sevenseg.py  test.py  tm1637.py
clock/: clock.py
myglfw/: myglfw.c
oled/: clock.py  oled.py
projects/DisplayImage/: CMakeCache.txt  CMakeLists.txt  DisplayImage  DisplayImage.cpp  Makefile  cmake_install.cmake
projects/blink/: CMakeCache.txt  CMakeLists.txt  Makefile  blink.c  blink_example  cmake_install.cmake
projects/checkface/: checkface.cpp  notes.ida
projects/clock/: buttons.py  buzzer.py  clock.py  mlx90614.py  oled.py  settings.py  terminalfont.py  weather.py  wifi.py  woeid.py
projects/goliath/: arm.py  base.py  bt.py  buttons.py  esc.py  fuelgauge.py  gamepad.py  goliath.py  main.py  multiplex.py  onestick.py  pin.py  quicrun.py  run  state.py  wheel.py
projects/mask/: .gitignore  anim.py  mask.py  pca.py  pca9865.py
projects/mlx90614/: mlx90614.py
projects/mpu9250/: Matrix3.cpp  Matrix3.h  makeit  mpu.py  mpu9250.cpp  mputest.py  vals.py
projects/mwick/: makeit  mwick.cpp  mwick.py
projects/myglfw/: Makefile
projects/oled/: buttons 1.py  buttons.py  buzzer.py  checkface.cpp  clock.json  clock.py  makecheckface  oled.py  settings.py  woeid.py
projects/ps2con/: CMakeLists.txt  ps2con.cpp  ps2contest.py  runcmake
projects/pyglet/: polygon.py
projects/pylib/: mcp4725.py  sevenseg.py  vl53.py
projects/raspicamtest/: CMakeLists.txt  makeit  raspicamtest.cpp
projects/seeface/: CMakeLists.txt  checkface.cpp  seeface.cpp  seefaceold.cpp
projects/sentrybot/: .gitignore  advsettings.html  angle.py  anim.py  atom.py  body.py  bt.py  controller.py  gamepad.py  legs.py  log.html  numbers.py  oled.py  options.json  optionsback.json  param.py  pca9685.py  pca9865.py  ps2.py  quicrun.py  saveload.py  sentrybot - Copy.py  sentrybot.py  sentryold.py  settings.html  settings.py  sound.py  soundold.py  terminalfont.py  test.py  testsnd.py
projects/sharedlibs/: notes.txt
projects/tank/: area.py  bt.py  buttons.py  camera.py  gamepad.py  lightbank.py  lightsensor.py  multiplex.py  onestick.py  ps2.py  (+8 more)
tft/: ST7735.py  shapes.py
(+128 files in other folders)
