cmake_minimum_required (VERSION 2.8)
project (raspicamtest)
find_package(raspicam REQUIRED)
find_package(OpenCV)
if (OpenCV_FOUND AND raspicam_CV_FOUND)
MESSAGE(STATUS "COMPILING OPENCV TESTS")
add_executable (raspicamtest raspicamtest.cpp)
target_link_libraries (raspicamtest ${raspicam_CV_LIBS})
ELSE()
MESSAGE(FATAL_ERROR "OPENCV NOT FOUND IN YOUR SYSTEM")
ENDIF()

